syntax = "proto3";

import "tag_config.proto";
import "type.proto";

// Although both path and version can be found in the keyspace, we include them 
// here for traceability back to where we originally got the model
message DataModelConfig {
    DataModelType type = 1;
    string extends_path = 2;
    uint32 version = 3;
	repeated TagConfig tags = 4;
}